added website title and customize some components

--- a/src/pages/home/components/Testimonial/testimonial.css
+++ b/src/pages/home/components/Testimonial/testimonial.css
@@ -7,3 +7,14 @@
   z-index: 10;
   display: none !important;
 }
+
+.swiper-button-prev, .swiper-rtl .swiper-button-next {
+  left: var(--swiper-navigation-sides-offset, 10px);
+  top: 90%;
+  right: left !important;
+}
+
+.swiper-button-next, .swiper-rtl .swiper-button-prev {
+  left: var(--swiper-navigation-sides-offset, 80px);
+  top: 90%;
+}
